# poetry-grpc-plugin

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  codeql-analysis.yml  python-publish.yaml
poetry_grpc_plugin/: plugins.py
tests/: test_protoc.py
