[tool.poetry]
name = "poetry-grpc-plugin"
version = "0.1.0"
description = "gRPC Poetry plugin"
authors = ["Federico Jaite <fede_654_87@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_grpc_plugin"}]
repository = "https://github.com/fedej/poetry-grpc-plugin"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Code Generators",
]

[tool.poetry.dependencies]
python = "^3.7"
grpcio-tools = "^1.39.0"
poetry = "^1.2.0a2"
mypy-protobuf = "^2.9"

[tool.poetry.group.dev.dependencies]
black = "^21.7-beta.0"
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"
pytest = "^6.2.4"

[tool.poetry.plugins."poetry.application.plugin"]
grpc = "poetry_grpc_plugin.plugins:GrpcApplicationPlugin"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
